// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<=== Manga ===> should create store 1`] = `
Object {
  "id": 43,
  "imageUrl": "http://one-piece.jpg",
  "publicationStartDate": "13 aout 2016",
  "score": 9.12,
  "title": "One Piece",
  "url": "http://one-piece.fr",
}
`;

exports[`<=== Manga ===> should create store 2`] = `
Object {
  "id": 43,
  "imageUrl": "http://one-piece.jpg",
  "publicationStartDate": null,
  "score": null,
  "title": "One Piece",
  "url": "http://one-piece.fr",
}
`;
